--- a/src/components/Offer/index.css
+++ b/src/components/Offer/index.css
@@ -1,5 +1,8 @@
+@import "../../css/variables.css";
+
 .offer-item {
     width: 45%;
+    min-width: 342px;
     max-width: 400px;
     height: 400px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.13);
@@ -7,12 +10,21 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    border-radius: 5%;
-    cursor: pointer
+    border-radius: 0.3rem;
+    cursor: pointer;
+    color: var(--light-black);
+    justify-content: space-around;
+    text-decoration: none;
+}
+
+.offer-item:hover {
+    box-shadow: 0 6px 12px 0 rgba(0,0,0,0.15);
 }
 
 .offer-title {
     padding: 8px;
+    font-weight: 600;
+    color: var(--title);
 }
 
 .cut-title {
@@ -33,4 +45,54 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.offer-item-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+}
+
+.info-container {
+    width: 70%;
+    text-align: right;
+}
+
+.price-container {
+    font-size: 18px;
+    font-weight: 600;
+    width: 100px;
+}
+
+.bottom-container {
+    border-top: 1px solid var(--light-border);
+    height: 58px;
+}
+
+.more-button {
+    align-items: center;
+    border: 0;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    height: 3rem;
+    justify-content: center;
+    padding: 0.2rem 1rem;
+    user-select: none;
+    white-space: nowrap;
+    background-color: var(--more-button);
+    transition: 0.1s ease-in-out;
+    color: var(--white);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 6px;
+}
+
+.more-button:hover {
+    background-color: var(--more-button-hover);
+    color: var(--white);
 }
